--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,5 @@
-<ol>
-  <% @tasks.each do |task| %>
-    <li><%= task.title %></li>
-  <% end %>
-</ol>
+<h2><%= @task.details %></h2>
+<lt><%= link_to "Back",  tasks_path%></lt>
+<lt><%= link_to "Edit", edit_task_path(@task)%></lt>
+
+<%= link_to "Delete #{@task.title}", task_path(@task), method: :delete, data: { confirm: "Are you sure?😡This Process is irreversible👿" } %>
